--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ input:focus {
     box-shadow: 0px 4px 45px rgba(0, 0, 0, 0.1);
     width: 100%;
     border-radius: 5px;
-    min-height: 470px;
+    min-height: 560px;
     height: 100%;
     position: relative;
     padding: 50px 30px 50px 30px;
@@ -225,7 +225,17 @@ a.card:hover {
     right: 0;
 }
 
+@media only screen and (max-width: 1300px) {
+    .card {
+        min-height: 460px;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
+    .card {
+        min-height: 460px;
+    }
+    
     .card a {
         width: 90%;
     }
@@ -233,4 +243,16 @@ a.card:hover {
 
 .card a:hover {
     opacity: 0.7;
+}
+
+@media only screen and (max-width: 380px) {
+    .card {
+        min-height: 460px;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .card {
+        min-height: 460px;
+    }
 }
