--- a/css/products.css
+++ b/css/products.css
@@ -6,7 +6,7 @@
 
 @media only screen and (max-width: 1200px) {
     .hero-section {
-        height: 100%;
+        height: 500px;
         padding-bottom: 100px;
     }
 }
@@ -160,16 +160,10 @@
     border-bottom: 4px solid #c01b22;
 }
 
-.hero-section .header {
-    position: relative;
-    top: 9rem;
-}
-
 .hero-section .header .header-section {
     display: flex;
     width: 100%;
     color: #fff;
-    margin: 50px 0;
 }
 
 .hero-section .header .header-section .side {
@@ -189,6 +183,7 @@
 
 .hero-section .header .header-section .side.left {
     width: 50%;
+    margin: 150px 0;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -201,19 +196,19 @@
 
 @media only screen and (max-width: 630px) {
     .hero-section .header .header-section .side.left {
-        font-size: 0.6em;
+        font-size: 1.5rem;
     }
 }
 
 @media only screen and (max-width: 380px) {
     .hero-section .header .header-section .side.left {
-        margin: 0 auto;
+        margin: 90px auto;
     }
 }
 
 @media only screen and (max-width: 350px) {
     .hero-section .header .header-section .side.left {
-        margin: 0 auto;
+        margin: 90px auto;
     }
 }
 
