--- a/css/services.css
+++ b/css/services.css
@@ -6,7 +6,7 @@
 
 @media only screen and (max-width: 1200px) {
     .hero-section {
-        height: 100%;
+        height: 500px;
         padding-bottom: 100px;
     }
 }
@@ -160,16 +160,10 @@
     border-bottom: 4px solid #c01b22;
 }
 
-.hero-section .header {
-    position: relative;
-    top: 9rem;
-}
-
 .hero-section .header .header-section {
     display: flex;
     width: 100%;
     color: #fff;
-    margin: 50px 0;
 }
 
 .hero-section .header .header-section .side {
@@ -189,6 +183,7 @@
 
 .hero-section .header .header-section .side.left {
     width: 50%;
+    margin: 150px 0;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -201,19 +196,19 @@
 
 @media only screen and (max-width: 630px) {
     .hero-section .header .header-section .side.left {
-        font-size: 0.6em;
+        font-size: 1.5rem;
     }
 }
 
 @media only screen and (max-width: 380px) {
     .hero-section .header .header-section .side.left {
-        margin: 0 auto;
+        margin: 90px auto;
     }
 }
 
 @media only screen and (max-width: 350px) {
     .hero-section .header .header-section .side.left {
-        margin: 0 auto;
+        margin: 90px auto;
     }
 }
 
@@ -325,6 +320,62 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
     padding: 4rem 0;
+}
+
+@media only screen and (max-width: 1200px) {
+    .services .services-section .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .services .services-section {
+        padding: 8rem 2rem 3rem 2rem;
+    }
+
+    .services .services-section .cards {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 630px) {
+    .services .services-section .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .services .services-section {
+        padding: 8rem 2rem 3rem 2rem;
+    }
+
+    .services .services-section .cards {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+    .services .services-section .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .services .services-section {
+        padding: 8rem 2rem 3rem 2rem;
+    }
+
+    .services .services-section .cards {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .services .services-section .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .services .services-section {
+        padding: 8rem 2rem 3rem 2rem;
+    }
+
+    .services .services-section .cards {
+        flex-direction: column;
+    }
 }
 
 /* FOOTER */
