--- a/css/home.css
+++ b/css/home.css
@@ -174,6 +174,8 @@
 .hero-section .header .header-section .side h1 {
     text-transform: uppercase;
     padding: 0 50px 0 0;
+    font-size: 2.5rem;
+    line-height: 1.4;
 }
 
 @media only screen and (max-width: 630px) {
