--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     background-color: #f2f2f2;
     font-family: Open Sans;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .container {
@@ -235,7 +236,7 @@ a.card:hover {
     .card {
         min-height: 460px;
     }
-    
+
     .card a {
         width: 90%;
     }
